fix: fix media root

--- a/html/nginx/default.conf
+++ b/html/nginx/default.conf
@@ -26,7 +26,7 @@ server {
         image/svg+xml/javascript;
 
     location /media {
-        alias /data/podcastx/;
+        alias /data/podcastx/media/;
     }
 
     location / {
