feat: add players

--- a/html/package.json
+++ b/html/package.json
@@ -11,7 +11,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "hls.js": "^0.14.17",
     "vue": "^2.5.2",
+    "vue-aplayer": "^1.6.1",
     "vue-gtag": "^1.10.0",
     "vue-router": "^3.0.1",
     "vue-simple-spinner": "^1.2.10"
