--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
         - "FLASK_ENV=${FLASK_ENV:-production}"
     depends_on:
       - "redis"
+      - "mongodb"
     env_file:
       - ".env"
     healthcheck:
