--- a/html/nginx/default.conf
+++ b/html/nginx/default.conf
@@ -25,6 +25,11 @@ server {
         application/rss+xml
         image/svg+xml/javascript;
 
+    add_header 'Access-Control-Allow-Origin' '*';
+    add_header 'Access-Control-Allow-Credentials' 'true';
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+    add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+
     location /media {
         alias /data/podcastx/media/;
     }
