test: for convienence

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
     volumes:
       - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
       - mongo-data:/data/db
-    # ports:
-    #   - "127.0.0.1:27017:27017"
+    ports:
+      - "127.0.0.1:27017:27017"
     networks:
       - proxy
 
