--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -14,11 +14,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: build
-        run: docker-compose build
+        run: sudo docker-compose build
       - name: run services
         run: |
-          docker-compose down
-          docker-compose up -d
+          sudo docker-compose down
+          sudo docker-compose up -d
       - name: reduce disk volume usage
         run: |
-          docker images | grep none | awk '{print $3}' | xargs docker rmi || true
+          sudo docker images | grep none | awk '{print $3}' | xargs sudo docker rmi || true
